--- a/hello.yaml
+++ b/hello.yaml
@@ -1,11 +1,18 @@
-apiVersion: v1
-kind: pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: hellojob
-  namespace: kkk
+  name: hello
 spec:
+  selector:
+    matchLabels:
+      app: hello
+  replicas: 2 # tells deployment to run 2 pods matching the template
   template:
+    metadata:
+      labels:
+        app: hello
     spec:
       containers:
-      - name: hellojob
+      - name: hello
         image: kishorekumarkb/kishore1:latest
+        
