--- a/hello.yaml
+++ b/hello.yaml
@@ -14,5 +14,8 @@ spec:
     spec:
       containers:
       - name: hello
-        image: kishorekumarkb/kishore1:latest
+        image:  nginx:1.14.2
+        ports:
+        - containerPort: 80
+
         
