--- a/hello.yaml
+++ b/hello.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: hello
-        image:  nginx:1.14.2
+        image:  kishorekumarkb/kishore1:latest
         ports:
         - containerPort: 80
 
