--- a/hello.yaml
+++ b/hello.yaml
@@ -1,11 +1,12 @@
 apiVersion: batch/v1
-kind: Job
+kind: Deployment
 metadata:
-  name: pi
+  name: httpd
 spec:
   template:
     spec:
       containers:
-      - name: pi
+      - name: httpd
         image: kishorekumarkb/kishore1:latest
-      restartPolicy: Never
+        ports:
+          containerPort: 80
