--- a/hello.yaml
+++ b/hello.yaml
@@ -9,4 +9,4 @@ spec:
       - name: httpd
         image: kishorekumarkb/kishore1:latest
         ports:
-          containerPort: 80
+        - containerPort: 80
