--- a/hello.yaml
+++ b/hello.yaml
@@ -1,9 +1,18 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: httpd
+  name: httpd-deployment
+  labels:
+    app: httpd
 spec:
+  replicas: 3
+  selector:
+    matchLabels:
+      app: httpd
   template:
+    metadata:
+      labels:
+        app: httpd
     spec:
       containers:
       - name: httpd
