--- a/svc.yaml
+++ b/svc.yaml
@@ -1,12 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: svc
+  name: httpd
   labels:
     run: httpd
 spec:
+  type: NodePort
   ports:
-  - port: 80
+  - port: 8080
+    targetPort: 80
     protocol: TCP
+    name: http
   selector:
     run: httpd
