--- a/myweb/Chart.yaml
+++ b/myweb/Chart.yaml
@@ -1,5 +1,7 @@
 apiVersion: app/v1
 
+name: myweb
+
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
